; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/smbfs/extr_proc.c_smb_close_fileid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/smbfs/extr_proc.c_smb_close_fileid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.smb_sb_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @smb_close_fileid(%struct.dentry* %0, i32 %1) #0 {
  %3 = alloca %struct.dentry*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.smb_sb_info*, align 8
  %6 = alloca i32, align 4
  store %struct.dentry* %0, %struct.dentry** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.dentry*, %struct.dentry** %3, align 8
  %8 = call %struct.smb_sb_info* @server_from_dentry(%struct.dentry* %7)
  store %struct.smb_sb_info* %8, %struct.smb_sb_info** %5, align 8
  %9 = load %struct.smb_sb_info*, %struct.smb_sb_info** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 (...) @get_seconds()
  %12 = call i32 @smb_proc_close(%struct.smb_sb_info* %9, i32 %10, i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  ret i32 %13
}

declare dso_local %struct.smb_sb_info* @server_from_dentry(%struct.dentry*) #1

declare dso_local i32 @smb_proc_close(%struct.smb_sb_info*, i32, i32) #1

declare dso_local i32 @get_seconds(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
